Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerBooleanField.quorum
class Main
    integer v = Test()
    action Main
    end

    action Test() returns integer
        boolean var = true
        return var
    end
end